[package]
name = "resolve"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full", "macros"] }
async-recursion = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"

[[bin]]
name = "resolve"
path = "src/resolve.rs"
