[package]
name = "glob-match"
description = "An extremely fast glob matcher"
version = "0.2.1"
license = "MIT"
authors = ["Devon Govett <devongovett@gmail.com>"]
edition = "2021"

[dev-dependencies]
criterion = "0.4.0"
glob = "0.3.1"
globset = "0.4.10"
test-case = "3.1.0"

[[bench]]
name = "bench"
harness = false

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'

[dependencies]
unic-segment = { version = "0.9.0", optional = true }
