[package]
name = "globwatch"
version = "0.1.0"
edition = "2021"
description = "Watch a set of globs efficiently"
license = "MIT OR Apache-2.0"

[dependencies]
futures = { version = "0.3.26" }
glob-match = "0.2.1"
itertools.workspace = true
merge-streams = "0.1.2"
notify = { version = "5.1.0", default-features = false, features = [
  "macos_fsevent",
  "fsevent-sys",
] }
notify-debouncer-mini = { version = "0.2.1", default-features = false }
pin-project = "1.0.12"
stop-token = "0.7.0"
tokio = { version = "1.25.0", features = ["sync"] }
tokio-stream = "0.1.12"
tracing = "0.1.37"
unic-segment = "0.9.0"
walkdir = "2.3.2"

[dev-dependencies]
test-case = "3.0.0"
tokio = { version = "1.25.0", features = [
  "rt",
  "rt-multi-thread",
  "time",
  "macros",
] }
tracing-subscriber = "0.3.16"
tracing-test = "0.2.4"
